sas-core/main/default/objects/Settlement_Country_Setting__mdt/Settlement_Country_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Settlement Country Setting</label>
    <pluralLabel>Settlement Country Settings</pluralLabel>
</CustomObject>