sas-core/main/default/objects/Settlement_Country_Setting__mdt/fields/Available_Currencies__c.field-meta.xml
<CustomField>
    <fullName>Available_Currencies__c</fullName>
    <description>A comma separated list of available currencies.</description>
    <inlineHelpText>A comma separated list of available currencies.</inlineHelpText>
    <label>Available Currencies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>