sas-core/main/default/objects/Settlement_Country_Setting__mdt/fields/Country_Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Short_Code__c</fullName>
    <label>Country Short Code</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>