sas-core/main/default/objects/Settlement_Country_Setting__mdt/fields/Maximum_Time_To_Claim_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Time_To_Claim_Compensation__c</fullName>
    <description>Holds the maxiumum amount of time a customer can wait before they file a claim to get compensated for e.g. a delayed/cancelled flight.</description>
    <inlineHelpText>Holds the maxiumum amount of time a customer can wait before they file a claim to get compensated for e.g. a delayed/cancelled flight.</inlineHelpText>
    <label>Maximum Time To Claim Compensation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>