sas-core/main/default/objects/Settlement_Country_Setting__mdt/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CROSS BORDER EDI</fullName>
                <default>true</default>
                <label>CROSS BORDER EDI</label>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>DK BANK TRANSFER</fullName>
            </value>
            <value>
                <fullName>DIRECT CREDIT ADV</fullName>
            </value>
            <value>
                <fullName>SEB PLN PAYMENTS TO PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>