sas-core/main/default/objects/Settlement_Country_Setting__mdt/fields/Uses_IBAN__c.field-meta.xml
<CustomField>
    <fullName>Uses_IBAN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this country uses the IBAN bank account number standard</description>
    <inlineHelpText>Determines whether this country uses the IBAN bank account number standard</inlineHelpText>
    <label>Uses IBAN</label>
    <type>Checkbox</type>
</CustomField>