sas-core/main/default/objects/Settlement_Country_Setting__mdt/listViews/Settlement_Country_Settings.listView-meta.xml
<ListView>
    <fullName>Settlement_Country_Settings</fullName>
    <columns>Country_Name__c</columns>
    <columns>Country_Short_Code__c</columns>
    <columns>Available_Currencies__c</columns>
    <columns>Default_Currency__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Settlement Country Settings</label>
    <language>en_US</language>
</ListView>